plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.sopt'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

sourceSets {
	integrationTest {
		java.srcDirs = [file('src/integrationTest/java')]
		resources.srcDirs = [file('src/integrationTest/resources')]
		compileClasspath += sourceSets.main.output
		runtimeClasspath += output + compileClasspath
	}
}

configurations {
	integrationTestImplementation.extendsFrom testImplementation
	integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'
	implementation 'io.sentry:sentry-spring-boot-4-starter:8.48.0'
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	implementation 'net.logstash.logback:logstash-logback-encoder:8.1'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	integrationTestImplementation 'org.springframework.boot:spring-boot-testcontainers'
	integrationTestImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	integrationTestImplementation 'org.testcontainers:testcontainers-mysql'
	integrationTestImplementation 'org.flywaydb:flyway-core'
	integrationTestImplementation 'org.flywaydb:flyway-mysql'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register('integrationTest', Test) {
	description = 'Runs MySQL migration and seed contract tests.'
	group = 'verification'
	testClassesDirs = sourceSets.integrationTest.output.classesDirs
	classpath = sourceSets.integrationTest.runtimeClasspath
	shouldRunAfter tasks.named('test')
	useJUnitPlatform()
}

tasks.named('check') {
	dependsOn tasks.named('integrationTest')
}
